// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateOperations > matches snapshot for mutation-only operations 1`] = `
"/* eslint-disable */
/* This file is auto-generated by tangrams. Do not edit. */

import { mutationOptions } from "@tanstack/react-query"
import { getClient } from "./client"

import type {
	CreateNewUserMutation,
	CreateNewUserMutationVariables,
	ResetAllUsersMutation,
} from "./types"

// Documents & Operations
const CreateNewUserDocument = /* GraphQL */ \`
mutation CreateNewUser($input: CreateUserInput!) {
  createUser(input: $input) {
    id
    name
  }
}
\`

export const createNewUserMutationOptions = () =>
	mutationOptions({
		mutationKey: ["test", "CreateNewUser"],
		mutationFn: async (variables: CreateNewUserMutationVariables) =>
			(await getClient()).request<CreateNewUserMutation>(CreateNewUserDocument, variables),
	})

const ResetAllUsersDocument = /* GraphQL */ \`
mutation ResetAllUsers {
  resetAllUsers
}
\`

export const resetAllUsersMutationOptions = () =>
	mutationOptions({
		mutationKey: ["test", "ResetAllUsers"],
		mutationFn: async () => (await getClient()).request<ResetAllUsersMutation>(ResetAllUsersDocument),
	})
"
`;

exports[`generateOperations > matches snapshot for post operations with nested fragments 1`] = `
"/* eslint-disable */
/* This file is auto-generated by tangrams. Do not edit. */

import { mutationOptions, queryOptions } from "@tanstack/react-query"
import { getClient } from "./client"

import type {
	GetUserQuery,
	GetUserQueryVariables,
	ListUsersQuery,
	ListUsersQueryVariables,
	CreateUserMutation,
	CreateUserMutationVariables,
	UpdateUserMutation,
	UpdateUserMutationVariables,
	DeleteUserMutation,
	DeleteUserMutationVariables,
	GetPostsQuery,
	GetPostsQueryVariables,
	CreatePostMutation,
	CreatePostMutationVariables,
} from "./types"

// Fragment Documents
const UserFieldsFragmentDoc = /* GraphQL */ \`
fragment UserFields on User {
  id
  name
  email
  avatarUrl
  createdAt
}
\`

const PostFieldsFragmentDoc = /* GraphQL */ \`
fragment PostFields on Post {
  id
  title
  content
  published
  createdAt
  tags
}
\`

const PostWithAuthorFragmentDoc = /* GraphQL */ \`
fragment PostWithAuthor on Post {
  ...PostFields
  author {
    ...UserFields
  }
}
\`

// Documents & Operations
const GetUserDocument = /* GraphQL */ \`
query GetUser($id: ID!) {
  user(id: $id) {
    ...UserFields
  }
}
\` + UserFieldsFragmentDoc

export const getUserQueryOptions = (variables: GetUserQueryVariables) =>
	queryOptions({
		queryKey: ["test", "GetUser", variables],
		queryFn: async () => (await getClient()).request<GetUserQuery>(GetUserDocument, variables ?? undefined),
	})

const ListUsersDocument = /* GraphQL */ \`
query ListUsers($limit: Int, $offset: Int) {
  users(limit: $limit, offset: $offset) {
    ...UserFields
  }
}
\` + UserFieldsFragmentDoc

export const listUsersQueryOptions = (variables?: ListUsersQueryVariables) =>
	queryOptions({
		queryKey: ["test", "ListUsers", variables],
		queryFn: async () => (await getClient()).request<ListUsersQuery>(ListUsersDocument, variables ?? undefined),
	})

const CreateUserDocument = /* GraphQL */ \`
mutation CreateUser($input: CreateUserInput!) {
  createUser(input: $input) {
    ...UserFields
  }
}
\` + UserFieldsFragmentDoc

export const createUserMutationOptions = () =>
	mutationOptions({
		mutationKey: ["test", "CreateUser"],
		mutationFn: async (variables: CreateUserMutationVariables) =>
			(await getClient()).request<CreateUserMutation>(CreateUserDocument, variables),
	})

const UpdateUserDocument = /* GraphQL */ \`
mutation UpdateUser($id: ID!, $input: UpdateUserInput!) {
  updateUser(id: $id, input: $input) {
    ...UserFields
  }
}
\` + UserFieldsFragmentDoc

export const updateUserMutationOptions = () =>
	mutationOptions({
		mutationKey: ["test", "UpdateUser"],
		mutationFn: async (variables: UpdateUserMutationVariables) =>
			(await getClient()).request<UpdateUserMutation>(UpdateUserDocument, variables),
	})

const DeleteUserDocument = /* GraphQL */ \`
mutation DeleteUser($id: ID!) {
  deleteUser(id: $id)
}
\`

export const deleteUserMutationOptions = () =>
	mutationOptions({
		mutationKey: ["test", "DeleteUser"],
		mutationFn: async (variables: DeleteUserMutationVariables) =>
			(await getClient()).request<DeleteUserMutation>(DeleteUserDocument, variables),
	})

const GetPostsDocument = /* GraphQL */ \`
query GetPosts($authorId: ID) {
  posts(authorId: $authorId) {
    ...PostWithAuthor
  }
}
\` + PostFieldsFragmentDoc + UserFieldsFragmentDoc + PostWithAuthorFragmentDoc

export const getPostsQueryOptions = (variables?: GetPostsQueryVariables) =>
	queryOptions({
		queryKey: ["test", "GetPosts", variables],
		queryFn: async () => (await getClient()).request<GetPostsQuery>(GetPostsDocument, variables ?? undefined),
	})

const CreatePostDocument = /* GraphQL */ \`
mutation CreatePost($input: CreatePostInput!) {
  createPost(input: $input) {
    ...PostFields
  }
}
\` + PostFieldsFragmentDoc

export const createPostMutationOptions = () =>
	mutationOptions({
		mutationKey: ["test", "CreatePost"],
		mutationFn: async (variables: CreatePostMutationVariables) =>
			(await getClient()).request<CreatePostMutation>(CreatePostDocument, variables),
	})
"
`;

exports[`generateOperations > matches snapshot for query-only operations 1`] = `
"/* eslint-disable */
/* This file is auto-generated by tangrams. Do not edit. */

import { queryOptions } from "@tanstack/react-query"
import { getClient } from "./client"

import type {
	GetUserByIdQuery,
	GetUserByIdQueryVariables,
	GetAllUsersQuery,
} from "./types"

// Documents & Operations
const GetUserByIdDocument = /* GraphQL */ \`
query GetUserById($id: ID!) {
  user(id: $id) {
    id
    name
  }
}
\`

export const getUserByIdQueryOptions = (variables: GetUserByIdQueryVariables) =>
	queryOptions({
		queryKey: ["test", "GetUserById", variables],
		queryFn: async () => (await getClient()).request<GetUserByIdQuery>(GetUserByIdDocument, variables ?? undefined),
	})

const GetAllUsersDocument = /* GraphQL */ \`
query GetAllUsers {
  users {
    id
    name
  }
}
\`

export const getAllUsersQueryOptions = () =>
	queryOptions({
		queryKey: ["test", "GetAllUsers"],
		queryFn: async () => (await getClient()).request<GetAllUsersQuery>(GetAllUsersDocument),
	})
"
`;

exports[`generateOperations > matches snapshot for user operations 1`] = `
"/* eslint-disable */
/* This file is auto-generated by tangrams. Do not edit. */

import { mutationOptions, queryOptions } from "@tanstack/react-query"
import { getClient } from "./client"

import type {
	GetUserQuery,
	GetUserQueryVariables,
	ListUsersQuery,
	ListUsersQueryVariables,
	CreateUserMutation,
	CreateUserMutationVariables,
	UpdateUserMutation,
	UpdateUserMutationVariables,
	DeleteUserMutation,
	DeleteUserMutationVariables,
} from "./types"

// Fragment Documents
const UserFieldsFragmentDoc = /* GraphQL */ \`
fragment UserFields on User {
  id
  name
  email
  avatarUrl
  createdAt
}
\`

// Documents & Operations
const GetUserDocument = /* GraphQL */ \`
query GetUser($id: ID!) {
  user(id: $id) {
    ...UserFields
  }
}
\` + UserFieldsFragmentDoc

export const getUserQueryOptions = (variables: GetUserQueryVariables) =>
	queryOptions({
		queryKey: ["test", "GetUser", variables],
		queryFn: async () => (await getClient()).request<GetUserQuery>(GetUserDocument, variables ?? undefined),
	})

const ListUsersDocument = /* GraphQL */ \`
query ListUsers($limit: Int, $offset: Int) {
  users(limit: $limit, offset: $offset) {
    ...UserFields
  }
}
\` + UserFieldsFragmentDoc

export const listUsersQueryOptions = (variables?: ListUsersQueryVariables) =>
	queryOptions({
		queryKey: ["test", "ListUsers", variables],
		queryFn: async () => (await getClient()).request<ListUsersQuery>(ListUsersDocument, variables ?? undefined),
	})

const CreateUserDocument = /* GraphQL */ \`
mutation CreateUser($input: CreateUserInput!) {
  createUser(input: $input) {
    ...UserFields
  }
}
\` + UserFieldsFragmentDoc

export const createUserMutationOptions = () =>
	mutationOptions({
		mutationKey: ["test", "CreateUser"],
		mutationFn: async (variables: CreateUserMutationVariables) =>
			(await getClient()).request<CreateUserMutation>(CreateUserDocument, variables),
	})

const UpdateUserDocument = /* GraphQL */ \`
mutation UpdateUser($id: ID!, $input: UpdateUserInput!) {
  updateUser(id: $id, input: $input) {
    ...UserFields
  }
}
\` + UserFieldsFragmentDoc

export const updateUserMutationOptions = () =>
	mutationOptions({
		mutationKey: ["test", "UpdateUser"],
		mutationFn: async (variables: UpdateUserMutationVariables) =>
			(await getClient()).request<UpdateUserMutation>(UpdateUserDocument, variables),
	})

const DeleteUserDocument = /* GraphQL */ \`
mutation DeleteUser($id: ID!) {
  deleteUser(id: $id)
}
\`

export const deleteUserMutationOptions = () =>
	mutationOptions({
		mutationKey: ["test", "DeleteUser"],
		mutationFn: async (variables: DeleteUserMutationVariables) =>
			(await getClient()).request<DeleteUserMutation>(DeleteUserDocument, variables),
	})
"
`;

exports[`generateOperations > with serverFunctions enabled > matches snapshot for mutation-only operations with server functions 1`] = `
"/* eslint-disable */
/* This file is auto-generated by tangrams. Do not edit. */

import { mutationOptions } from "@tanstack/react-query"
import { createServerFn } from "@tanstack/react-start"
import { getClient } from "./client"

import type {
	CreateNewUserMutation,
	CreateNewUserMutationVariables,
	ResetAllUsersMutation,
} from "./types"

// Documents & Operations
const CreateNewUserDocument = /* GraphQL */ \`
mutation CreateNewUser($input: CreateUserInput!) {
  createUser(input: $input) {
    id
    name
  }
}
\`

export const createNewUserFn = createServerFn({ method: "POST" })
	.validator((data: CreateNewUserMutationVariables) => data)
	.handler(async ({ data }) =>
		(await getClient()).request<CreateNewUserMutation>(CreateNewUserDocument, data)
	)

export const createNewUserMutationOptions = () =>
	mutationOptions({
		mutationKey: ["test", "CreateNewUser"],
		mutationFn: (variables: CreateNewUserMutationVariables) => createNewUserFn({ data: variables }),
	})

const ResetAllUsersDocument = /* GraphQL */ \`
mutation ResetAllUsers {
  resetAllUsers
}
\`

export const resetAllUsersFn = createServerFn({ method: "POST" })
	.handler(async () =>
		(await getClient()).request<ResetAllUsersMutation>(ResetAllUsersDocument)
	)

export const resetAllUsersMutationOptions = () =>
	mutationOptions({
		mutationKey: ["test", "ResetAllUsers"],
		mutationFn: () => resetAllUsersFn(),
	})
"
`;

exports[`generateOperations > with serverFunctions enabled > matches snapshot for query-only operations with server functions 1`] = `
"/* eslint-disable */
/* This file is auto-generated by tangrams. Do not edit. */

import { queryOptions } from "@tanstack/react-query"
import { createServerFn } from "@tanstack/react-start"
import { getClient } from "./client"

import type {
	GetUserByIdQuery,
	GetUserByIdQueryVariables,
	GetAllUsersQuery,
} from "./types"

// Documents & Operations
const GetUserByIdDocument = /* GraphQL */ \`
query GetUserById($id: ID!) {
  user(id: $id) {
    id
    name
  }
}
\`

export const getUserByIdFn = createServerFn({ method: "GET" })
	.validator((data: GetUserByIdQueryVariables) => data)
	.handler(async ({ data }) =>
		(await getClient()).request<GetUserByIdQuery>(GetUserByIdDocument, data)
	)

export const getUserByIdQueryOptions = (variables: GetUserByIdQueryVariables) =>
	queryOptions({
		queryKey: ["test", "GetUserById", variables],
		queryFn: () => getUserByIdFn({ data: variables ?? undefined }),
	})

const GetAllUsersDocument = /* GraphQL */ \`
query GetAllUsers {
  users {
    id
    name
  }
}
\`

export const getAllUsersFn = createServerFn({ method: "GET" })
	.handler(async () =>
		(await getClient()).request<GetAllUsersQuery>(GetAllUsersDocument)
	)

export const getAllUsersQueryOptions = () =>
	queryOptions({
		queryKey: ["test", "GetAllUsers"],
		queryFn: () => getAllUsersFn(),
	})
"
`;

exports[`generateOperations > with serverFunctions enabled > matches snapshot for user operations with server functions 1`] = `
"/* eslint-disable */
/* This file is auto-generated by tangrams. Do not edit. */

import { mutationOptions, queryOptions } from "@tanstack/react-query"
import { createServerFn } from "@tanstack/react-start"
import { getClient } from "./client"

import type {
	GetUserQuery,
	GetUserQueryVariables,
	ListUsersQuery,
	ListUsersQueryVariables,
	CreateUserMutation,
	CreateUserMutationVariables,
	UpdateUserMutation,
	UpdateUserMutationVariables,
	DeleteUserMutation,
	DeleteUserMutationVariables,
} from "./types"

// Fragment Documents
const UserFieldsFragmentDoc = /* GraphQL */ \`
fragment UserFields on User {
  id
  name
  email
  avatarUrl
  createdAt
}
\`

// Documents & Operations
const GetUserDocument = /* GraphQL */ \`
query GetUser($id: ID!) {
  user(id: $id) {
    ...UserFields
  }
}
\` + UserFieldsFragmentDoc

export const getUserFn = createServerFn({ method: "GET" })
	.validator((data: GetUserQueryVariables) => data)
	.handler(async ({ data }) =>
		(await getClient()).request<GetUserQuery>(GetUserDocument, data)
	)

export const getUserQueryOptions = (variables: GetUserQueryVariables) =>
	queryOptions({
		queryKey: ["test", "GetUser", variables],
		queryFn: () => getUserFn({ data: variables ?? undefined }),
	})

const ListUsersDocument = /* GraphQL */ \`
query ListUsers($limit: Int, $offset: Int) {
  users(limit: $limit, offset: $offset) {
    ...UserFields
  }
}
\` + UserFieldsFragmentDoc

export const listUsersFn = createServerFn({ method: "GET" })
	.validator((data: ListUsersQueryVariables) => data)
	.handler(async ({ data }) =>
		(await getClient()).request<ListUsersQuery>(ListUsersDocument, data)
	)

export const listUsersQueryOptions = (variables?: ListUsersQueryVariables) =>
	queryOptions({
		queryKey: ["test", "ListUsers", variables],
		queryFn: () => listUsersFn({ data: variables ?? undefined }),
	})

const CreateUserDocument = /* GraphQL */ \`
mutation CreateUser($input: CreateUserInput!) {
  createUser(input: $input) {
    ...UserFields
  }
}
\` + UserFieldsFragmentDoc

export const createUserFn = createServerFn({ method: "POST" })
	.validator((data: CreateUserMutationVariables) => data)
	.handler(async ({ data }) =>
		(await getClient()).request<CreateUserMutation>(CreateUserDocument, data)
	)

export const createUserMutationOptions = () =>
	mutationOptions({
		mutationKey: ["test", "CreateUser"],
		mutationFn: (variables: CreateUserMutationVariables) => createUserFn({ data: variables }),
	})

const UpdateUserDocument = /* GraphQL */ \`
mutation UpdateUser($id: ID!, $input: UpdateUserInput!) {
  updateUser(id: $id, input: $input) {
    ...UserFields
  }
}
\` + UserFieldsFragmentDoc

export const updateUserFn = createServerFn({ method: "POST" })
	.validator((data: UpdateUserMutationVariables) => data)
	.handler(async ({ data }) =>
		(await getClient()).request<UpdateUserMutation>(UpdateUserDocument, data)
	)

export const updateUserMutationOptions = () =>
	mutationOptions({
		mutationKey: ["test", "UpdateUser"],
		mutationFn: (variables: UpdateUserMutationVariables) => updateUserFn({ data: variables }),
	})

const DeleteUserDocument = /* GraphQL */ \`
mutation DeleteUser($id: ID!) {
  deleteUser(id: $id)
}
\`

export const deleteUserFn = createServerFn({ method: "POST" })
	.validator((data: DeleteUserMutationVariables) => data)
	.handler(async ({ data }) =>
		(await getClient()).request<DeleteUserMutation>(DeleteUserDocument, data)
	)

export const deleteUserMutationOptions = () =>
	mutationOptions({
		mutationKey: ["test", "DeleteUser"],
		mutationFn: (variables: DeleteUserMutationVariables) => deleteUserFn({ data: variables }),
	})
"
`;
